[package]
name = "erc20"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[dependencies]
ink = { version = "4.0.0-rc", default-features = false }
ink_env = { version = "3.4.0", default-features = false }
ink_storage = { version = "3.4.0", default-features = false }
getrandom = { version = "0.2", features = ["js"], default-features = false }
metaplex-token-metadata = { version = "0.0.1", features = ["no-entrypoint"] }

scale = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
ink_lang = { version = "3.4.0", default-features = false }

openbrush = { git = "https://github.com/Brushfam/openbrush-contracts", branch = "develop", default-features = false, features = ["psp22"] }

[lib]
name = "erc20"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "ink_env/std", "ink_storage/std", "scale-info/std"]
ink-as-dependency = []
